--- a/index.html
+++ b/index.html
@@ -1,11 +1,37 @@
 <!DOCTYPE html>
 <html>
 <head>
+<title>S1700</title>
+<link rel="icon" type="image/x-icon" href="favicon.ico">
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-SLNXZTCGHB"></script>
+<script>
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+gtag('config', 'G-SLNXZTCGHB');
+</script>
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script src="https://unpkg.com/jquery.terminal/js/jquery.terminal.min.js"></script>
 <link rel="stylesheet" href="https://unpkg.com/jquery.terminal/css/jquery.terminal.min.css"/>
 </head>
 <body>
+    <script>
+        var age, daysBetweenDates;
+        daysBetweenDates = function(d1, d2) {
+          var diffDays, oneDay;
+          oneDay = 24 * 60 * 60 * 1000;
+          diffDays = (d2 - Date.parse(d1)) / oneDay;
+          return diffDays;
+        };
+        
+        age = function() {
+          $('#myAge').text(daysBetweenDates('July 07, 2008 07:00:00', new Date()) / 365);
+        };
+        
+        setInterval(age, 500);
+    </script>
+
     <script>
         $('body').terminal({
             help: function() {
@@ -20,7 +46,11 @@
             },
 
             whoami: function() {
-        this.echo('Hello world, my name is S1700. I love coding and I know a lot about it. Don\'t believe me? Who do you think made this website? \nYou can find all of my projects with the projects command.', {typing: true, delay: 50});
+        this.echo('Name: S1700' +
+            '\nAge: ' + $('#myAge').text() +
+            '\nLocation: England' +
+            '\nEmail: samuel20354@outlook.com' +
+            '\nSkills: Python coding and web development.');
             },
             projects: function() {
         this.echo('All of my projects (including this one) can be found here:\nhttps://github.com/s1700');
@@ -30,9 +60,13 @@
             },
             suggest: function() {
         this.echo('What would you like to see added?\nhttps://github.com/s1700/s1700.github.io/issues');
+            },
+            secret: function() {
+        this.echo('You\'ve found the secret command, theres nothing here yet ¯\_( ͡° ͜ʖ ͡°)_/¯');
             }
         }, {
-            greetings: 'S1700.github.io\n\nUse \'help\' to list all commands'
+            greetings: 'S1700.github.io\n\nUse \'help\' to list all commands',
+            prompt: 's1700> '
         });
     </script>
 </body>
