--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
+<html lang="en">
 <head>
+<meta name="viewport">
 <title>S1700</title>
 <link rel="icon" type="image/x-icon" href="favicon.ico">
 <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -17,6 +19,22 @@ gtag('config', 'G-SLNXZTCGHB');
 </head>
 <body>
     <script>
+        var age, daysBetweenDates;
+        daysBetweenDates = function(d1, d2) {
+          var diffDays, oneDay;
+          oneDay = 24 * 60 * 60 * 1000;
+          diffDays = (d2 - Date.parse(d1)) / oneDay;
+          return diffDays;
+        };
+        
+        age = function() {
+          $('#myAge').text(daysBetweenDates('July 07, 2008 07:00:00', new Date()) / 365);
+          myAge = daysBetweenDates('July 07, 2008 07:00:00', new Date()) / 365;
+        };
+        
+        setInterval(age, 500);
+    </script>
+    <script>
         $('body').terminal({
             help: function() {
         this.echo('\nCommands:' + 
@@ -31,15 +49,16 @@ gtag('config', 'G-SLNXZTCGHB');
 
             whoami: function() {
         this.echo('\nName: S1700' +
+            '\nAge: ' + myAge + ' years' +
             '\nLocation: England' +
             '\nEmail: samuel20354@outlook.com' +
-            '\nSkills: Python coding and web development.');
+            '\nSkills: Python coding and full stack development.');
             },
             projects: function() {
         this.echo('All of my projects (including this one) can be found here:\nhttps://github.com/s1700');
             },
             socials: function() {
-        this.echo('You can find me on all these:\nDiscord: S1700#8367');
+        this.echo('\nYou can find me on all these:\nDiscord: S1700#8367\nGithub: S1700');
             },
             suggest: function() {
         this.echo('What would you like to see added?\nhttps://github.com/s1700/s1700.github.io/issues');
