another one! wow

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <html lang="en">
 <head>
-<meta name="viewport">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>S1700</title>
 <link rel="icon" type="image/x-icon" href="favicon.ico">
 <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -33,14 +33,35 @@ gtag('config', 'G-SLNXZTCGHB');
         };
         
         setInterval(age, 500);
-    </script>
-    <script>
+
+        const sequence = ['Initialization of boot sequence', 'Pinging server', 'Checking cookies', 'Mounting filesystem', 'Saying hi to Google', 'Taking cookies from the jar'];
+
         $('body').terminal({
+            onInit(){
+                const term = this;
+                if (!localStorage.getItem('visited')) {
+                    term.pause(true);
+                    (function loop() {
+                        term.echo(sequence.shift());
+                        if (sequence.length) {
+                            setTimeout(loop, 1000);
+                        } else {
+                            localStorage.setItem('visited', true);
+                            term.resume();
+                        }
+                    })();
+                }
+            },
+
+            hello: function(name) {
+                this.echo('Hello ' + name);
+            },
+
             help: function() {
         this.echo('\nCommands:' + 
             
-            '\n\nhelp       - Shows this message, belive me or not.' +
-            '\nclear      - Clear the terminal, everyone likes to keep it clean.' +
+            '\n\nhelp       - Shows this message, believe it or not.' +
+            '\nhello      - Type your name and I\'ll say hi :)' +
             '\nwhoami     - Tells you a bit about me.' +
             '\nprojects   - Gives you a list of all my projects and where to go to find them.' +
             '\nsocials    - Tells you where you can find me on social.' +
@@ -52,7 +73,8 @@ gtag('config', 'G-SLNXZTCGHB');
             '\nAge: ' + myAge + ' years' +
             '\nLocation: England' +
             '\nEmail: samuel20354@outlook.com' +
-            '\nSkills: Python coding and full stack development.');
+            '\nSkills: Python coding and full stack development.' +
+            '\nFun fact: I love music! Some say I can\'t go without it.');
             },
             projects: function() {
         this.echo('All of my projects (including this one) can be found here:\nhttps://github.com/s1700');
@@ -64,7 +86,7 @@ gtag('config', 'G-SLNXZTCGHB');
         this.echo('What would you like to see added?\nhttps://github.com/s1700/s1700.github.io/issues');
             },
             secret: function() {
-        this.echo('You\'ve found the secret command, theres nothing here yet ¯\\_( ͡° ͜ʖ ͡°)_/¯');
+        this.echo('Oh you found my secret command! Well unfortunately theres nothing here yet.');
             }
         }, {
             greetings: 'S1700.github.io\n\nUse \'help\' to list all commands',
